<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.studio.malika.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.studio.malika.ui.fragment.DashboardFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_dashboard" />
    <activity
        android:id="@+id/navigation_camera"
        android:name="com.studio.malika.ui.camera.CameraActivity"
        tools:layout="@layout/activity_camera" />

    <fragment
        android:id="@+id/navigation_faq"
        android:name="com.studio.malika.ui.fragment.DashboardFragment"
        android:label="@string/title_faq"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.studio.malika.ui.fragment.DashboardFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_dashboard" />
</navigation>