<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.camera.DetailCameraActivity">
    <ProgressBar
        android:id="@+id/progress_Bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="parent" />


    <ImageView
        android:layout_marginTop="30dp"
        android:id="@+id/iv_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/detail"
        android:textStyle="bold"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_camera" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/nama"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_detail"
        app:layout_constraintTop_toBottomOf="@+id/text_detail" />

    <TextView
        android:id="@+id/tv_kekerasan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/kekerasan"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />


    <TextView
        android:id="@+id/tv_tgl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tanggal"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_kekerasan"
        app:layout_constraintTop_toBottomOf="@+id/tv_kekerasan" />


    <TextView
        android:id="@+id/tv_alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/alamat"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_tgl"
        app:layout_constraintTop_toBottomOf="@+id/tv_tgl" />


    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btn_lapor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lapor_btn"
        app:layout_constraintStart_toStartOf="@+id/tv_alamat"
        app:layout_constraintTop_toBottomOf="@+id/tv_alamat"
        android:gravity="center"

        />



</androidx.constraintlayout.widget.ConstraintLayout>